Obsługa pozostałych typów generatorów